2017-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2017-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out the management client whc(1) in 'src/whc/'.
2017-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Added whprocess(1) in 'src/whprocess/.
2017-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'List Hosts' dialog to whc(1).
2017-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'UNKNOWN_EVENTS' table to the database.
	* Incremented the database version to 2.
	* Added a 'List Unknown Events' dialog to whc(1).
2017-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Enabled the 'make rpm' target.
2017-09-07 Fred Gleason <fredg@paravelsystems.com>
	* Removed the double-click action from the whc(1) main screen.
2017-09-07 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'UNKNOWN_EVENTS' table from the database.
	* Added a 'UNKNOWN_USER_AGENTS' table to the database.
	* Added a 'UNKNOWN_HOSTS' table to the database.
	* Added a 'List Unknow User Agents' dialog in whc(1).
	* Added a 'List Unknown Hosts' dialog' in whc(1).
	* Added a 'Show Unknown Host LogLine' dialog whc(1).
2017-09-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'HOSTS.IP_ADDRESS' field to the database.
	* Added an 'UNKNOWN_HOSTS.IP_ADDRESS' field to the database.
	* Incremented the database version to 3.
	* Implemented DNS lookups for hostnames and IP addresses.
	* Added indices on 'HOSTS' and 'UNKNOWN_HOSTS' tables.
	* Incremented the database version to 4.
2017-09-22 Fred Gleason <fredg@paravelsystems.com>
	* Added logic to disable buttons until target items are in a selected
	state in whc(1).