@@ -106,7 +106,7 @@ rm -rf $RPM_BUILD_ROOT
 %doc NEWS 
 %doc README 
 %doc conf/webhound-sample.conf
-
+%doc conf/logrotate-http-sample
 
 %changelog
 * Wed Sep  6 2017 Fred Gleason <fredg@paravelsystems.com>
